<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_videowp"
            android:checked="true"
            android:icon="@drawable/ic_videowp"
            android:title="@string/title_tab_video_wp" />
        <item
            android:id="@+id/nav_picturewp"
            android:icon="@drawable/ic_gallery"
            android:title="@string/title_tab_pic_wp" />
        <item
            android:id="@+id/nav_ringtone"
            android:icon="@drawable/ic_ringtone"
            android:title="@string/title_tab_ringtone" />
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Settings" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="FeedBack" />
        <item
            android:id="@+id/nav_infor"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="Information" />

    </group>

</menu>
